--- a/casos.html
+++ b/casos.html
@@ -1,6 +1,6 @@
-&lt;!doctype html&gt;
-&lt;html lang="es"&gt;
-&lt;head&gt;
+<!doctype html>
+<html lang="es">
+<head>
   &lt;meta charset="utf-8"/&gt;
   &lt;meta name="viewport" content="width=device-width, initial-scale=1"/&gt;
   &lt;title&gt;Genética | Microdeleción 15q11.2&lt;/title&gt;
@@ -157,6 +157,6 @@
     &lt;/div&gt;
   &lt;/section&gt;
 
-  &lt;footer class="footer"&gt;© 2025 | Información genética actualizada a 2025&lt;/footer&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+ <footer class="footer">© 2025 | Comunidad de Familias 15q11.2</footer>
+</body>
+</html>
