--- a/casos.html
+++ b/casos.html
@@ -1,162 +1,165 @@
 <!doctype html>
 <html lang="es">
 <head>
-  &lt;meta charset="utf-8"/&gt;
-  &lt;meta name="viewport" content="width=device-width, initial-scale=1"/&gt;
-  &lt;title&gt;Genética | Microdeleción 15q11.2&lt;/title&gt;
-  &lt;meta name="description" content="Información genética sobre la microdeleción 15q11.2"&gt;
-  &lt;link rel="stylesheet" href="styles.css"/&gt;
-  &lt;script defer src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"&gt;&lt;/script&gt;
-  &lt;script defer src="https://cdn.jsdelivr.net/npm/chart.js"&gt;&lt;/script&gt;
-  &lt;script defer src="scripts.js"&gt;&lt;/script&gt;
-  &lt;script defer src="genetica.js"&gt;&lt;/script&gt;
-&lt;/head&gt;
-&lt;body&gt;
-  &lt;nav class="nav"&gt;
-    &lt;div class="inner"&gt;
-      &lt;div class="brand"&gt;
-        &lt;img class="logo" src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/logo%20micro1.png" alt="Logo Microdeleción 15q11.2"&gt;
-        &lt;div&gt;Microdeleción 15q11.2&lt;/div&gt;
-      &lt;/div&gt;
-      &lt;div class="nav-links"&gt;
-        &lt;a href="index.html"&gt;Inicio&lt;/a&gt;
-        &lt;a href="resumen.html"&gt;Resumen&lt;/a&gt;
-        &lt;a href="casos.html"&gt;Casos&lt;/a&gt;
-        &lt;a href="genetica.html"&gt;Genética&lt;/a&gt;
-        &lt;a href="estadisticas.html"&gt;Estadísticas&lt;/a&gt;
-        &lt;a class="btn-agregar" href="formulario.html"&gt;Reportar caso&lt;/a&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
-  &lt;/nav&gt;
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Genética | Microdeleción 15q11.2</title>
+  <meta name="description" content="Información genética sobre la microdeleción 15q11.2">
+  <link rel="stylesheet" href="styles.css"/>
+  <script defer src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="scripts.js"></script>
+  <script defer src="genetica.js"></script>
+</head>
+<body>
+  <nav class="nav" role="navigation">
+    <div class="inner">
+      <div class="brand">
+        <img class="logo" src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/logo%20micro1.png" alt="Logo Microdeleción 15q11.2">
+        <div>Microdeleción 15q11.2</div>
+      </div>
+      <div class="nav-links">
+        <a href="index.html">Inicio</a>
+        <a href="resumen.html">Resumen</a>
+        <a href="casos.html">Casos</a>
+        <a href="genetica.html">Genética</a>
+        <a href="estadisticas.html">Estadísticas</a>
+        <a class="btn-agregar" href="formulario.html">Reportar caso</a>
+      </div>
+    </div>
+  </nav>
 
-  &lt;section class="container"&gt;
-    &lt;h1&gt;Microdeleción 15q11.2&lt;/h1&gt;
-    &lt;p class="subtitle"&gt;
-      Información clave para comprender esta condición genética poco frecuente, organizada de manera clara para familias y profesionales.
-    &lt;/p&gt;
+  <main>
+    <section class="container">
+      <h1>Microdeleción 15q11.2</h1>
+      <p class="subtitle">
+        Información clave para comprender esta condición genética poco frecuente, organizada de manera clara para familias y profesionales.
+      </p>
 
-    &lt;!-- Hero con imagen --&gt;
-    &lt;div class="hero-genetica"&gt;
-      &lt;img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/7572d736-f7ab-41b2-84a4-1b5a419f2c94.jpg" 
-           alt="Familias y microdeleción" class="hero-image"&gt;
-    &lt;/div&gt;
+      <!-- Hero con imagen -->
+      <div class="hero-genetica">
+        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/7572d736-f7ab-41b2-84a4-1b5a419f2c94.jpg" 
+             alt="Familias y microdeleción" class="hero-image">
+      </div>
 
-    &lt;!-- Qué es --&gt;
-    &lt;div class="panel"&gt;
-      &lt;h2&gt;¿Qué es?&lt;/h2&gt;
-      &lt;p&gt;
-        La &lt;strong&gt;microdeleción 15q11.2&lt;/strong&gt; es una condición genética rara causada por la 
-        &lt;strong&gt;pérdida de una pequeña porción del cromosoma 15&lt;/strong&gt;, en la región conocida como 
-        &lt;em&gt;Burnside-Butler&lt;/em&gt;. Afecta los genes &lt;strong&gt;TUBGCP5, CYFIP1, NIPA2 y NIPA1&lt;/strong&gt;.
-      &lt;/p&gt;
-    &lt;/div&gt;
+      <!-- Qué es -->
+      <div class="panel">
+        <h2>¿Qué es?</h2>
+        <p>
+          La <strong>microdeleción 15q11.2</strong> es una condición genética rara causada por la 
+          <strong>pérdida de una pequeña porción del cromosoma 15</strong>, en la región conocida como 
+          <em>Burnside-Butler</em>. Afecta los genes <strong>TUBGCP5, CYFIP1, NIPA2 y NIPA1</strong>.
+        </p>
+      </div>
 
-    &lt;!-- Síntomas --&gt;
-    &lt;div class="grid-2"&gt;
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;Síntomas frecuentes&lt;/h2&gt;
-        &lt;ul&gt;
-          &lt;li&gt;Retraso en el desarrollo motor y/o del lenguaje.&lt;/li&gt;
-          &lt;li&gt;Dificultades de aprendizaje (leves a moderadas).&lt;/li&gt;
-          &lt;li&gt;Trastornos de la comunicación, TEA, TDAH, ansiedad.&lt;/li&gt;
-          &lt;li&gt;Convulsiones o actividad epileptiforme.&lt;/li&gt;
-          &lt;li&gt;Hipotonía en la infancia.&lt;/li&gt;
-          &lt;li&gt;Problemas gastrointestinales y de sueño.&lt;/li&gt;
-        &lt;/ul&gt;
-      &lt;/div&gt;
-      &lt;div class="panel image-panel"&gt;
-        &lt;img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/i%CC%81cono%20DNA.png" 
-             alt="Icono ADN" class="icono-dna"&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
+      <!-- Síntomas -->
+      <div class="grid-2">
+        <div class="panel">
+          <h2>Síntomas frecuentes</h2>
+          <ul>
+            <li>Retraso en el desarrollo motor y/o del lenguaje.</li>
+            <li>Dificultades de aprendizaje (leves a moderadas).</li>
+            <li>Trastornos de la comunicación, TEA, TDAH, ansiedad.</li>
+            <li>Convulsiones o actividad epileptiforme.</li>
+            <li>Hipotonía en la infancia.</li>
+            <li>Problemas gastrointestinales y de sueño.</li>
+          </ul>
+        </div>
+        <div class="panel image-panel">
+          <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/i%CC%81cono%20DNA.png" 
+               alt="Icono ADN" class="icono-dna">
+        </div>
+      </div>
 
-    &lt;!-- Frecuencia y herencia --&gt;
-    &lt;div class="grid-2"&gt;
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;¿Qué tan común es?&lt;/h2&gt;
-        &lt;p&gt;
-          Se estima en alrededor del &lt;strong&gt;0.25–0.30% de las personas evaluadas genéticamente&lt;/strong&gt;. 
-          Es una de las microdeleciones más frecuentes detectadas en microarrays clínicos.  
-          &lt;em&gt;Expresividad variable:&lt;/em&gt; no todos los portadores presentan síntomas graves.
-        &lt;/p&gt;
-      &lt;/div&gt;
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;¿Se hereda?&lt;/h2&gt;
-        &lt;p&gt;
-          Puede heredarse de un progenitor (con o sin síntomas).  
-          Si es &lt;em&gt;de novo&lt;/em&gt; (nueva en el niño), la probabilidad de repetición es baja.
-        &lt;/p&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
+      <!-- Frecuencia y herencia -->
+      <div class="grid-2">
+        <div class="panel">
+          <h2>¿Qué tan común es?</h2>
+          <p>
+            Se estima en alrededor del <strong>0.25–0.30% de las personas evaluadas genéticamente</strong>. 
+            Es una de las microdeleciones más frecuentes detectadas en microarrays clínicos.  
+            <em>Expresividad variable:</em> no todos los portadores presentan síntomas graves.
+          </p>
+        </div>
+        <div class="panel">
+          <h2>¿Se hereda?</h2>
+          <p>
+            Puede heredarse de un progenitor (con o sin síntomas).  
+            Si es <em>de novo</em> (nueva en el niño), la probabilidad de repetición es baja.
+          </p>
+        </div>
+      </div>
 
-    &lt;!-- Detección --&gt;
-    &lt;div class="panel"&gt;
-      &lt;h2&gt;¿Cómo se detecta?&lt;/h2&gt;
-      &lt;p&gt;
-        Mediante estudios como &lt;strong&gt;Microarray CGH o SNP microarrays&lt;/strong&gt;, que son más precisos que el cariotipo convencional.  
-        &lt;br&gt;Ejemplo de resultado: &lt;code&gt;arr[hg19]15q11.2(22728371-23260335)x1dn&lt;/code&gt;.
-      &lt;/p&gt;
-    &lt;/div&gt;
+      <!-- Detección -->
+      <div class="panel">
+        <h2>¿Cómo se detecta?</h2>
+        <p>
+          Mediante estudios como <strong>Microarray CGH o SNP microarrays</strong>, que son más precisos que el cariotipo convencional.  
+          <br>Ejemplo de resultado: <code>arr[hg19]15q11.2(22728371-23260335)x1dn</code>.
+        </p>
+      </div>
 
-    &lt;!-- Genes involucrados --&gt;
-    &lt;div class="grid-2"&gt;
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;Genes involucrados&lt;/h2&gt;
-        &lt;ul&gt;
-          &lt;li&gt;&lt;strong&gt;NIPA1 / NIPA2&lt;/strong&gt;: transporte de magnesio, epilepsia y rigidez muscular.&lt;/li&gt;
-          &lt;li&gt;&lt;strong&gt;CYFIP1&lt;/strong&gt;: vinculado con autismo y dificultades cognitivas.&lt;/li&gt;
-          &lt;li&gt;&lt;strong&gt;TUBGCP5&lt;/strong&gt;: asociado a TDAH, TOC y ansiedad.&lt;/li&gt;
-        &lt;/ul&gt;
-      &lt;/div&gt;
-      &lt;div class="panel image-panel"&gt;
-        &lt;img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/ChatGPT%20Image%2013%20ago%202025%2C%2010_39_09.png" 
-             alt="Ilustración genes" class="image-side"&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
+      <!-- Genes involucrados -->
+      <div class="grid-2">
+        <div class="panel">
+          <h2>Genes involucrados</h2>
+          <ul>
+            <li><strong>NIPA1 / NIPA2</strong>: transporte de magnesio, epilepsia y rigidez muscular.</li>
+            <li><strong>CYFIP1</strong>: vinculado con autismo y dificultades cognitivas.</li>
+            <li><strong>TUBGCP5</strong>: asociado a TDAH, TOC y ansiedad.</li>
+          </ul>
+        </div>
+        <div class="panel image-panel">
+          <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/ChatGPT%20Image%2013%20ago%202025%2C%2010_39_09.png" 
+               alt="Ilustración genes" class="image-side">
+        </div>
+      </div>
 
-    &lt;!-- Gráficos --&gt;
-    &lt;div class="grid-2"&gt;
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;Genes implicados&lt;/h2&gt;
-        &lt;div class="gene-info"&gt;
-          &lt;p&gt;Esta región crítica contiene cuatro genes principales:&lt;/p&gt;
-          &lt;ul&gt;
-            &lt;li&gt;&lt;strong&gt;CYFIP1&lt;/strong&gt;: Regula la síntesis de proteínas en sinapsis neuronales&lt;/li&gt;
-            &lt;li&gt;&lt;strong&gt;NIPA1/2&lt;/strong&gt;: Transportadores de magnesio esenciales&lt;/li&gt;
-            &lt;li&gt;&lt;strong&gt;TUBGCP5&lt;/strong&gt;: Participa en la organización microtubular&lt;/li&gt;
-          &lt;/ul&gt;
-        &lt;/div&gt;
-        &lt;canvas id="chartGenes" height="160" aria-label="Frecuencia de afectación de genes"&gt;&lt;/canvas&gt;
-      &lt;/div&gt;
-      
-      &lt;div class="panel"&gt;
-        &lt;h2&gt;Patrón de herencia&lt;/h2&gt;
-        &lt;div class="inheritance-info"&gt;
-          &lt;p&gt;Características genéticas principales:&lt;/p&gt;
-          &lt;ul&gt;
-            &lt;li&gt;Herencia &lt;strong&gt;autosómica dominante&lt;/strong&gt; con penetrancia variable&lt;/li&gt;
-            &lt;li&gt;~65% de casos son &lt;em&gt;de novo&lt;/em&gt; (no heredados)&lt;/li&gt;
-            &lt;li&gt;Riesgo de recurrencia del 50% en descendencia&lt;/li&gt;
-          &lt;/ul&gt;
-        &lt;/div&gt;
-        &lt;canvas id="chartHerencia" height="160" aria-label="Distribución de patrones de herencia"&gt;&lt;/canvas&gt;
-      &lt;/div&gt;
-    &lt;/div&gt;
+      <!-- Gráficos -->
+      <div class="grid-2">
+        <div class="panel">
+          <h2>Genes implicados</h2>
+          <div class="gene-info">
+            <p>Esta región crítica contiene cuatro genes principales:</p>
+            <ul>
+              <li><strong>CYFIP1</strong>: Regula la síntesis de proteínas en sinapsis neuronales</li>
+              <li><strong>NIPA1/2</strong>: Transportadores de magnesio esenciales</li>
+              <li><strong>TUBGCP5</strong>: Participa en la organización microtubular</li>
+            </ul>
+          </div>
+          <canvas id="chartGenes" height="160" aria-label="Frecuencia de afectación de genes"></canvas>
+        </div>
+        
+        <div class="panel">
+          <h2>Patrón de herencia</h2>
+          <div class="inheritance-info">
+            <p>Características genéticas principales:</p>
+            <ul>
+              <li>Herencia <strong>autosómica dominante</strong> con penetrancia variable</li>
+              <li>~65% de casos son <em>de novo</em> (no heredados)</li>
+              <li>Riesgo de recurrencia del 50% en descendencia</li>
+            </ul>
+          </div>
+          <canvas id="chartHerencia" height="160" aria-label="Distribución de patrones de herencia"></canvas>
+        </div>
+      </div>
 
-    &lt;!-- Apoyo --&gt;
-    &lt;div class="panel"&gt;
-      &lt;h2&gt;Apoyo y recomendaciones&lt;/h2&gt;
-      &lt;p&gt;
-        La intervención temprana con &lt;strong&gt;terapias de lenguaje, fisioterapia y apoyo conductual&lt;/strong&gt; 
-        puede marcar la diferencia.  
-        &lt;br&gt;Existen comunidades de familias, como &lt;em&gt;Unique&lt;/em&gt;, donde compartir experiencias y apoyarse mutuamente.
-      &lt;/p&gt;
-      &lt;blockquote&gt;
-        "La microdeleción 15q11.2 no define a tu hijo. Con apoyos adecuados, cada persona puede desarrollarse a su manera y alcanzar su máximo potencial."
-      &lt;/blockquote&gt;
-    &lt;/div&gt;
-  &lt;/section&gt;
+      <!-- Apoyo -->
+      <div class="panel">
+        <h2>Apoyo y recomendaciones</h2>
+        <p>
+          La intervención temprana con <strong>terapias de lenguaje, fisioterapia y apoyo conductual</strong> 
+          puede marcar la diferencia.  
+          <br>Existen comunidades de familias, como <em>Unique</em>, donde compartir experiencias y apoyarse mutuamente.
+        </p>
+        <blockquote>
+          "La microdeleción 15q11.2 no define a tu hijo. Con apoyos adecuados, cada persona puede desarrollarse a su manera y alcanzar su máximo potencial."
+        </blockquote>
+      </div>
+    </section>
+  </main>
 
- <footer class="footer">© 2025 | Comunidad de Familias 15q11.2</footer>
+  <footer class="footer">© 2025 | Información genética actualizada a 2025</footer>
 </body>
 </html>
+
