--- a/casos.html
+++ b/casos.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Genética | Microdeleción 15q11.2</title>
-  <meta name="description" content="Información genética sobre la microdeleción 15q11.2">
+  <title>Casos Registrados | Microdeleción 15q11.2</title>
+  <meta name="description" content="Base de datos de casos de microdeleción 15q11.2 reportados por familias">
   <link rel="stylesheet" href="styles.css"/>
   <script defer src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script defer src="scripts.js"></script>
-  <script defer src="genetica.js"></script>
+  <script defer src="casos.js"></script>
 </head>
 <body>
-  <nav class="nav" role="navigation">
+  <nav class="nav">
     <div class="inner">
       <div class="brand">
         <img class="logo" src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/logo%20micro1.png" alt="Logo Microdeleción 15q11.2">
@@ -29,137 +28,63 @@
     </div>
   </nav>
 
-  <main>
-    <section class="container">
-      <h1>Microdeleción 15q11.2</h1>
-      <p class="subtitle">
-        Información clave para comprender esta condición genética poco frecuente, organizada de manera clara para familias y profesionales.
-      </p>
+  <section class="container">
+    <h1>Casos Registrados</h1>
+    <p class="subtitle">Base de datos comunitaria de personas con microdeleción 15q11.2 reportados por familias</p>
 
-      <!-- Hero con imagen -->
-      <div class="hero-genetica">
-        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/7572d736-f7ab-41b2-84a4-1b5a419f2c94.jpg" 
-             alt="Familias y microdeleción" class="hero-image">
-      </div>
+    <div class="controls">
+      <input type="text" id="search" placeholder="Buscar casos por nombre, ubicación o síntomas..." aria-label="Buscar casos">
+      
+      <select id="filtro-genero">
+        <option value="">Todos los géneros</option>
+        <option value="m">Masculino</option>
+        <option value="f">Femenino</option>
+      </select>
 
-      <!-- Qué es -->
-      <div class="panel">
-        <h2>¿Qué es?</h2>
-        <p>
-          La <strong>microdeleción 15q11.2</strong> es una condición genética rara causada por la 
-          <strong>pérdida de una pequeña porción del cromosoma 15</strong>, en la región conocida como 
-          <em>Burnside-Butler</em>. Afecta los genes <strong>TUBGCP5, CYFIP1, NIPA2 y NIPA1</strong>.
-        </p>
-      </div>
+      <select id="filtro-gravedad">
+        <option value="">Todos los niveles</option>
+        <option value="leve">Leve</option>
+        <option value="moderado">Moderado</option>
+        <option value="severo">Severo</option>
+      </select>
 
-      <!-- Síntomas -->
-      <div class="grid-2">
-        <div class="panel">
-          <h2>Síntomas frecuentes</h2>
-          <ul>
-            <li>Retraso en el desarrollo motor y/o del lenguaje.</li>
-            <li>Dificultades de aprendizaje (leves a moderadas).</li>
-            <li>Trastornos de la comunicación, TEA, TDAH, ansiedad.</li>
-            <li>Convulsiones o actividad epileptiforme.</li>
-            <li>Hipotonía en la infancia.</li>
-            <li>Problemas gastrointestinales y de sueño.</li>
-          </ul>
+      <button id="btn-limpiar" class="button secondary">Limpiar filtros</button>
+    </div>
+
+    <div class="filtros-activos" id="filtros-activos"></div>
+
+    <!-- Estadísticas de resultados -->
+    <div class="panel" id="estadisticas-resultados">
+      <div class="grid-3">
+        <div>
+          <h3>Total de casos</h3>
+          <p class="stat-number" id="total-casos">0</p>
         </div>
-        <div class="panel image-panel">
-          <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/i%CC%81cono%20DNA.png" 
-               alt="Icono ADN" class="icono-dna">
+        <div>
+          <h3>Casos validados</h3>
+          <p class="stat-number" id="casos-validados">0</p>
         </div>
-      </div>
-
-      <!-- Frecuencia y herencia -->
-      <div class="grid-2">
-        <div class="panel">
-          <h2>¿Qué tan común es?</h2>
-          <p>
-            Se estima en alrededor del <strong>0.25–0.30% de las personas evaluadas genéticamente</strong>. 
-            Es una de las microdeleciones más frecuentes detectadas en microarrays clínicos.  
-            <em>Expresividad variable:</em> no todos los portadores presentan síntomas graves.
-          </p>
-        </div>
-        <div class="panel">
-          <h2>¿Se hereda?</h2>
-          <p>
-            Puede heredarse de un progenitor (con o sin síntomas).  
-            Si es <em>de novo</em> (nueva en el niño), la probabilidad de repetición es baja.
-          </p>
+        <div>
+          <h3>Casos no validados</h3>
+          <p class="stat-number" id="casos-no-validados">0</p>
         </div>
       </div>
+    </div>
 
-      <!-- Detección -->
-      <div class="panel">
-        <h2>¿Cómo se detecta?</h2>
-        <p>
-          Mediante estudios como <strong>Microarray CGH o SNP microarrays</strong>, que son más precisos que el cariotipo convencional.  
-          <br>Ejemplo de resultado: <code>arr[hg19]15q11.2(22728371-23260335)x1dn</code>.
-        </p>
-      </div>
+    <!-- Casos Validados -->
+    <h2>Casos Validados</h2>
+    <div id="casos-validados-container" class="listado-casos"></div>
 
-      <!-- Genes involucrados -->
-      <div class="grid-2">
-        <div class="panel">
-          <h2>Genes involucrados</h2>
-          <ul>
-            <li><strong>NIPA1 / NIPA2</strong>: transporte de magnesio, epilepsia y rigidez muscular.</li>
-            <li><strong>CYFIP1</strong>: vinculado con autismo y dificultades cognitivas.</li>
-            <li><strong>TUBGCP5</strong>: asociado a TDAH, TOC y ansiedad.</li>
-          </ul>
-        </div>
-        <div class="panel image-panel">
-          <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/ChatGPT%20Image%2013%20ago%202025%2C%2010_39_09.png" 
-               alt="Ilustración genes" class="image-side">
-        </div>
-      </div>
+    <!-- Casos No Validados -->
+    <h2>Casos No Validados</h2>
+    <div id="casos-no-validados-container" class="listado-casos"></div>
 
-      <!-- Gráficos -->
-      <div class="grid-2">
-        <div class="panel">
-          <h2>Genes implicados</h2>
-          <div class="gene-info">
-            <p>Esta región crítica contiene cuatro genes principales:</p>
-            <ul>
-              <li><strong>CYFIP1</strong>: Regula la síntesis de proteínas en sinapsis neuronales</li>
-              <li><strong>NIPA1/2</strong>: Transportadores de magnesio esenciales</li>
-              <li><strong>TUBGCP5</strong>: Participa en la organización microtubular</li>
-            </ul>
-          </div>
-          <canvas id="chartGenes" height="160" aria-label="Frecuencia de afectación de genes"></canvas>
-        </div>
-        
-        <div class="panel">
-          <h2>Patrón de herencia</h2>
-          <div class="inheritance-info">
-            <p>Características genéticas principales:</p>
-            <ul>
-              <li>Herencia <strong>autosómica dominante</strong> con penetrancia variable</li>
-              <li>~65% de casos son <em>de novo</em> (no heredados)</li>
-              <li>Riesgo de recurrencia del 50% en descendencia</li>
-            </ul>
-          </div>
-          <canvas id="chartHerencia" height="160" aria-label="Distribución de patrones de herencia"></canvas>
-        </div>
-      </div>
+  </section>
 
-      <!-- Apoyo -->
-      <div class="panel">
-        <h2>Apoyo y recomendaciones</h2>
-        <p>
-          La intervención temprana con <strong>terapias de lenguaje, fisioterapia y apoyo conductual</strong> 
-          puede marcar la diferencia.  
-          <br>Existen comunidades de familias, como <em>Unique</em>, donde compartir experiencias y apoyarse mutuamente.
-        </p>
-        <blockquote>
-          "La microdeleción 15q11.2 no define a tu hijo. Con apoyos adecuados, cada persona puede desarrollarse a su manera y alcanzar su máximo potencial."
-        </blockquote>
-      </div>
-    </section>
-  </main>
+  <div class="disclaimer">
+    <p>🔒 <strong>Privacidad:</strong> La información mostrada es de carácter general. Para proteger la privacidad, hemos omitido datos sensibles.</p>
+  </div>
 
-  <footer class="footer">© 2025 | Información genética actualizada a 2025</footer>
+  <footer class="footer">© 2025 | Comunidad de Familias 15q11.2</footer>
 </body>
 </html>
-
