--- a/genetica.html
+++ b/genetica.html
@@ -108,6 +108,12 @@
           </ul>
         </div>
         <canvas id="chartGenes" height="160" aria-label="Frecuencia de afectación de genes"></canvas>
+ <div class="panel">
+  <div class="disclaimer">
+    <p>💡 <strong>Nota sobre los datos:</strong> Los gráficos muestran información basada en literatura médica general 
+    sobre microdeleción 15q11.2. Los porcentajes son ilustrativos y pueden variar en cada caso individual.</p>
+  </div>
+</div>
       </div>
       
       <div class="panel">
