--- a/genetica.html
+++ b/genetica.html
@@ -98,7 +98,7 @@
     <!-- Gráficos -->
     <div class="grid-2">
       <div class="panel">
-        <h2>Genes implicados</h2>
+        <h2> 🧬 Genes implicados</h2>
         <div class="gene-info">
           <p>Esta región crítica contiene cuatro genes principales:</p>
           <ul>
