--- a/index.html
+++ b/index.html
@@ -50,9 +50,22 @@
           <a class="button secondary" href="resumen.html">Ver resumen</a>
         </div>
       </div>
-      
-      <div class="hero-image">
-        <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/7572d736-f7ab-41b2-84a4-1b5a419f2c94.jpg" alt="Familias Microdeleción 15q11.2">
+    
+<div class="hero">
+  <div class="container hero-flex">
+    <div class="hero-content">
+      <h1>Microdeleción 15q11.2 – Comunidad de Familias</h1>
+      <p>Plataforma colaborativa para documentar y comprender la microdeleción 15q11.2 
+      <strong>desde la perspectiva de las familias afectadas</strong>.</p>
+    </div>
+    <div class="hero-image">
+      <img src="https://raw.githubusercontent.com/Evelez23/-microdelecion/refs/heads/main/img/82526dd8-8147-48ea-88dc-700b6a49ebf8.png" 
+           alt="Mi hijo empujando su caminadora - cada pequeño paso es una victoria" 
+           class="pintura-oleo">
+      <p class="pie-foto">Cada pequeño paso es una victoria - Familia 15q11.2</p>
+    </div>
+  </div>
+</div>
       </div>
     </div>
 
